adds fiber demo server
